tests/errors/test_missing_return.wyn
// This should fail to compile — missing return in non-void function
// EXPECT_ERROR: may not return a value

fn get() -> int {
}

fn main() -> int {
    println(get().to_string())
    return 0
}
